# drawz

./: AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  justfile
.githooks/: pre-commit
.github/formula/: drawz.rb
.github/workflows/: ci.yml  release.yml
crates/drawz-cli/: Cargo.toml
crates/drawz-cli/src/: main.rs  mcp.rs  render.rs
crates/drawz-cli/tests/: mcp_protocol.rs
crates/drawz-core/: Cargo.toml
crates/drawz-core/src/: frame.rs  lib.rs  measure.rs  render.rs  result.rs  schema.rs
crates/drawz-core/src/mermaid/: flowchart.rs  helpers.rs  mod.rs  parse.rs  sequence.rs  state.rs
crates/drawz-core/src/renderers/: component.rs  dag.rs  flow.rs  freeform.rs  mod.rs  sequence.rs  state.rs  table.rs  tree.rs
crates/drawz-core/tests/: component.rs  dag.rs  edge_cases.rs  flow.rs  freeform.rs  happy_path.rs  mermaid.rs  phase3_edge_cases.rs  regression.rs  sequence.rs  state.rs  table.rs  tree.rs
design/: high-level-design.md  mcp-agent-prompt.md  prd.md
design/adr/: 001-rendering-constraints.md  002-response-contract.md  003-mermaid-scope.md
skills/drawz-shell/: SKILL.md
