[package]
name = "drawz-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for rendering structured diagrams as ASCII/Unicode art"

[[bin]]
name = "drawz"
path = "src/main.rs"

[dependencies]
drawz-core = { path = "../drawz-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
