[package]
name = "drawz-cli"
version = "1.0.0"
edition = "2021"
description = "CLI for rendering structured diagrams as ASCII/Unicode art"

[[bin]]
name = "drawz"
path = "src/main.rs"

[dependencies]
drawz-core = { path = "../drawz-core" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server", "macros", "stdio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
terminal_size = "0.4.4"
