[package]
name = "drawz-core"
version = "1.0.1"
edition = "2021"
description = "Semantic diagram renderer for agent-to-human communication in terminals"

[dependencies]
ascii-dag = "0.9.1"
serde = { version = "1", features = ["derive"] }
unicode-width = "0.2"

[dev-dependencies]
serde_json = "1.0.150"
